--- a/index.Rmd
+++ b/index.Rmd
@@ -2,6 +2,8 @@
 title: "Machine Learning Project"
 author: "S Grimsley"
 date: "November 1, 2016"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
