Added additional accuracy measures

--- a/index.Rmd
+++ b/index.Rmd
@@ -105,14 +105,18 @@ modFit
 plot(modFit)
 ```
 
-The model was applied to the testing data, resulting in an accuracy of 99.35% and Kappa of 99.17%.  These measures are more accurate for how the model will perform on an independant data set.
+The model was applied to the testing data, resulting in an accuracy of 99.35% and Kappa of 99.17%.  These measures are more accurate for how the model will perform on an independant data set.  The out of sample error rate is 0.65%.
 
 ```{r error=FALSE, message=FALSE}
 pred <- predict(modFit, newdata=testing)
 confusionMatrix(pred, testing$classe)
 ```
 
-Due to the high accuracy and Kappa, this model will be applied to the testing set.
+Out of sample error rate of 0.65%:
+```{r error=FALSE, message=FALSE}
+error <- sum(pred != testing$classe)/length(pred)*100
+```
+
 
 ###Results
 The test data was input and processed in the same manner as the training data (removing variables), and predictions generated from the model.  
