Displayed, not stored, results

--- a/index.Rmd
+++ b/index.Rmd
@@ -114,7 +114,7 @@ confusionMatrix(pred, testing$classe)
 
 Out of sample error rate of 0.65%:
 ```{r error=FALSE, message=FALSE}
-error <- sum(pred != testing$classe)/length(pred)*100
+sum(pred != testing$classe)/length(pred)*100
 ```
 
 
